<resources>
    <string name="app_name">Inventory App</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="add_remove_delete">Add/Minus/Delete</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="x">X</string>
    <string name="sale">sale</string>
    <string name="order">order</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete this?</string>
    <string name="type_amount">Type amount</string>
    <string name="sell_one">Sell One</string>
    <string name="order_one">Order One</string>
    <string name="delete_item">Delete item</string>
    <string name="add_new_item">Add new Item</string>
    <string name="tap_on_add_new_item_to_get_startted">Tap on Add New Item To get Started</string>
    <string name="photo_of_product">Photo of product</string>
    <string name="take_photo">Take photo</string>
    <string name="type_amount_here">Type Amount Here</string>
    <string name="type_price_here">Type Price Here</string>
    <string name="type_name_here">Type Name Here</string>
    <string name="new_inventory_item">New Inventory Item</string>
</resources>
