<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView
                style="@style/detail_text_size"
                android:text="@string/name"/>

        <TextView
                style="@style/detail_text_size"
                android:id="@+id/nameTextView"/>

        <TextView
                style="@style/detail_text_size"
                android:text="@string/price"/>

        <TextView
                style="@style/detail_text_size"
                android:id="@+id/price_textView2"/>

        <TextView
                style="@style/detail_text_size"
                android:text="@string/quantity"/>

        <TextView
                style="@style/detail_text_size"
                android:id="@+id/quantity_textView4"/>

        <LinearLayout style="@style/detail_linear_layout_style">

            <EditText style="@style/detail_edit_text_style"
                      android:id="@+id/order_edittext"/>

            <Button style="@style/detail_order_sale_style"
                    android:id="@+id/order"
                    android:text="@string/order"/>
        </LinearLayout>

        <LinearLayout style="@style/detail_linear_layout_style">

            <EditText style="@style/detail_edit_text_style"
                      android:id="@+id/decrease_edittext"/>

            <Button style="@style/detail_order_sale_style"
                    android:id="@+id/sale_order"
                    android:text="@string/sale"/>
        </LinearLayout>

        <LinearLayout style="@style/detail_linear_layout_style">

            <Button style="@style/add_minus_detail_layout"
                    android:text="@string/order_one"
                    android:id="@+id/add_one"/>

            <Button style="@style/add_minus_detail_layout"
                    android:text="@string/sell_one"
                    android:id="@+id/minus_one"/>
        </LinearLayout>

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/photo_product_detail"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_item"
                android:id="@+id/delete_item"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Order More"
        android:id="@+id/order_more"/>
    </LinearLayout>

</ScrollView>