<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

    <TextView android:layout_width="@dimen/zero_width"
              android:layout_height="wrap_content"
              android:text="@string/name"
              android:layout_weight=".25"/>

    <TextView android:layout_width="@dimen/zero_width"
              android:layout_height="wrap_content"
              android:text="@string/quantity"
              android:layout_weight=".25"/>

    <TextView android:layout_width="@dimen/zero_width"
              android:layout_height="wrap_content"
              android:text="@string/price"
              android:layout_weight=".25"/>

    <TextView android:layout_width="@dimen/zero_width"
              android:layout_height="wrap_content"
              android:text="@string/add_remove"
              android:layout_weight=".25"/>

</TableRow>