<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingTop="5dp"
          android:paddingBottom="5dp">

    <TextView style="@style/row_style"
              android:id="@+id/item_name"
              android:text="@string/name"/>

    <TextView style="@style/row_style"
              android:id="@+id/item_quantity"
              android:text="@string/quantity"/>

    <TextView style="@style/row_style"
              android:id="@+id/item_price"
              android:text="@string/price"/>

    <LinearLayout style="@style/row_style"
                  android:orientation="horizontal">

        <TextView style="@style/add_remove_style"
                  android:id="@+id/add"
                  android:text="+"/>


        <TextView style="@style/add_remove_style"
                  android:id="@+id/remove"
                  android:text="-"/>
    </LinearLayout>


</TableRow>